@@ -1,1 +1,2 @@
+DIST 2.3.1_p20191013.tar.gz 2445357 SHA256 819e60c215e61abff2990eac20520b85083fba78598a49a5a6ff915d7206a0c4 SHA512 3de360f58de63662be7db7704a1e4b74ccba03c656ee68dde7e82f4231cbeb6e9d6c7f20a01dab57d0e54740f1f33acd40d07fbe67673993230c08d8aecd9359 WHIRLPOOL 0338d27a73f0b01a079f80129727d413833771fce306d7e839c5a2d23a6c9da71c8ee751e67928d07791cb927b746039d8c5ae6396d7baa06e6ee3217347198b
 DIST ants_testdata-2.3.1_p20191013.tar.xz 25056428 SHA256 df2396d453a37674945612b2248d4ca818fce6a0b2d97beb88ab3bc59d040657 SHA512 0f86b967cd5e6c7481804c5b1dfb8d638a0560fbb08f86f04d9a3dc508a64e3181d056c2c9cdc26cbcf8eae9e45ecb29fa58580a1377ed8733b87b1b04b15ab2 WHIRLPOOL 08a5adb931b4606a0b03e32effc218d4940395472f7c2b62098472fe999cc0f0a452454619eba2bb2da775a0d5e5eb7baa966bdccf087da1d57d781061006422
