@@ -1,3 +1,6 @@
+  16 May 2020;  <chymera@gentoo.org> ants-2.3.1_p20191013.ebuild:
+  sci-biology/ants: building from tarball, failing
+
 *ants-2.3.1_p20191013 (14 Dec 2019)
 
   14 Dec 2019;  <chymera@gentoo.org> +ants-2.3.1_p20191013.ebuild,
